# supply-chain-early-warning-demo

./: .gitignore  README.md  pyproject.toml
experiments/: run_demo.py  run_sim.py
notebooks/: demo.ipynb
sc_sim/: disruption.py  flow.py  instability.py  metrics.py  network.py
