[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-early-warning-demo"
version = "2.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
include = ["sc_sim*"]